# panelkit

./: .gitignore  BENCHMARKS.md  Cargo.toml  GUIDE.md  LICENSE-APACHE  LICENSE-MIT  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: bench_results.txt
benchmarks/: bench_placebo.py  bench_sc.py  make_plots.py
crates/estimators/: Cargo.toml
crates/estimators/benches/: estimators.rs
crates/estimators/src/: lib.rs  panel.rs  result.rs
crates/estimators/src/did/: bacon.rs  callaway.rs  mod.rs  sunab.rs  twfe.rs
crates/estimators/src/fe/: mod.rs  within.rs
crates/estimators/src/mcnnm/: mod.rs  softimpute.rs
crates/estimators/src/sc/: augmented.rs  cpasc.rs  mod.rs  sdid.rs  synthetic.rs
crates/estimators/tests/: cpasc.rs  did.rs  sc.rs  sc_family.rs
crates/geo/: Cargo.toml
crates/geo/src/: diagnostics.rs  lib.rs  power.rs  selection.rs  types.rs
crates/geo/tests/: geo.rs
crates/geolift/: Cargo.toml
crates/geolift/src/: power.rs
crates/inference/: Cargo.toml
crates/inference/src/: batch.rs  bootstrap.rs  ci.rs  lib.rs  parallel.rs  placebo.rs
crates/inference/tests/: inference.rs
crates/linalg/: Cargo.toml
crates/linalg/src/: error.rs  lib.rs  matrix.rs  rng.rs
crates/linalg/src/factor/: cholesky.rs  eig_sym.rs  mod.rs  qr.rs  randomized.rs  svd.rs  svd_gram.rs
crates/linalg/src/ops/: matmul.rs  mod.rs  norms.rs  transform.rs
crates/linalg/src/opt/: mod.rs  simplex.rs  softthresh.rs
crates/linalg/src/solve/: lstsq.rs  mod.rs  spd.rs
crates/linalg/tests/: numerics.rs
crates/pypanelkit/: Cargo.toml
crates/pypanelkit/src/: api_did.rs  api_geo.rs  api_sc.rs  convert.rs  lib.rs  results.rs  validate.rs
examples/: cpasc_demo.py  did_demo.py  geo_demo.py  power_demo.py  sc_demo.py
python/panelkit/: __init__.py  _panelkit.pyi  design.py  estimators.py
python/tests/: test_batch.py  test_cpasc.py  test_design.py  test_did.py  test_did_inference.py  test_inference_units.py  test_sc.py  test_sc_family.py  test_sc_inference_engines.py  test_validation.py
