[workspace]
resolver = "2"
members = [
    "crates/linalg",
    "crates/estimators",
    "crates/inference",
    "crates/geo",
    "crates/pypanelkit",
]

[workspace.package]
version = "0.2.8"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
authors = ["panelkit contributors"]
repository = "https://github.com/cacoleman16/panelkit"

[workspace.dependencies]
# Internal crates
panelkit-linalg = { path = "crates/linalg" }
panelkit-estimators = { path = "crates/estimators" }
panelkit-inference = { path = "crates/inference" }
panelkit-geo = { path = "crates/geo" }

# The numerical core has NO external numeric deps. rayon is optional and lives
# behind a feature flag so the reusable core stays dependency-free by default.
rayon = "1.10"

# Python binding deps — confined to the pypanelkit crate only.
# pyo3 >= 0.24.1 fixes RUSTSEC-2025-0020; numpy 0.25 pairs with pyo3 0.25.
pyo3 = { version = "0.25", default-features = false }
numpy = "0.25"

# Dev-only.
proptest = "1"
criterion = { version = "0.5", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
