[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "panelkit"
version = "0.2.5"
description = "Fast, from-scratch causal-inference estimators for panel/geo experiments (SC, ASC, SDID, DiD, MC-NNM)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "panelkit contributors" }]
keywords = ["causal-inference", "synthetic-control", "difference-in-differences", "econometrics", "panel-data"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = ["numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/cacoleman16/panelkit"
Repository = "https://github.com/cacoleman16/panelkit"
Documentation = "https://github.com/cacoleman16/panelkit/blob/main/GUIDE.md"
Issues = "https://github.com/cacoleman16/panelkit/issues"

[project.optional-dependencies]
# Core install is numpy-only. These are optional:
plot = ["matplotlib>=3.5"]          # for the geo-design figures (.plot())
pandas = ["pandas>=1.3"]            # for GeoDesign.from_long(DataFrame)
test = ["pytest>=7", "scipy>=1.7", "matplotlib>=3.5", "pandas>=1.3"]

[tool.maturin]
python-source = "python"
module-name = "panelkit._panelkit"
manifest-path = "crates/pypanelkit/Cargo.toml"
features = ["extension-module"]
include = ["LICENSE-MIT", "LICENSE-APACHE", "GUIDE.md", "BENCHMARKS.md"]
