[package]
name = "panelkit-estimators"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Causal-inference estimators (SC family, DiD family, MC-NNM) built on panelkit-linalg."

[dependencies]
panelkit-linalg = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "estimators"
harness = false
