[package]
name = "panelkit-geo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Geo-experiment design: multi-method power analysis, market selection, and real-world diagnostics for panelkit."

[features]
default = []
parallel = ["dep:rayon", "panelkit-inference/parallel", "panelkit-linalg/parallel"]

[dependencies]
panelkit-linalg = { workspace = true }
panelkit-estimators = { workspace = true }
panelkit-inference = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
