[package]
name = "panelkit-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Resampling inference engines (placebo, jackknife, bootstrap, conformal) for panelkit."

[features]
default = []
parallel = ["dep:rayon", "panelkit-linalg/parallel"]

[dependencies]
panelkit-linalg = { workspace = true }
panelkit-estimators = { workspace = true }
rayon = { workspace = true, optional = true }
