[package]
name = "panelkit-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Resampling inference engines (placebo, jackknife, bootstrap, conformal) for panelkit."

[features]
default = []
# (No `panelkit-linalg/parallel` here: the linalg core has no parallel code
# paths — the feature it used to forward to was a no-op and has been removed.)
parallel = ["dep:rayon"]

[dependencies]
panelkit-linalg = { workspace = true }
panelkit-estimators = { workspace = true }
rayon = { workspace = true, optional = true }
